fix: improve thread safety by replacing synchronized blocks with ReentrantLock in AbstractSttEngine